--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass -watch scss -o css"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
-    "angular-route": "^1.6.9"
+    "angular-route": "^1.6.9",
+    "node-sass": "^4.8.3"
   }
 }
